--- a/src/app/components/Auth/signup/signup.component.html
+++ b/src/app/components/Auth/signup/signup.component.html
@@ -1,79 +1,105 @@
-<div class="wrapper">
-    <div class="page-header" style="background-image: url('./assets/img/login-image.jpg');">
-        <div class="filter"></div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4 col-sm-6 mr-auto ml-auto">
-                    <div class="card card-register">
-                        <h3 class="title" style="margin-top: 10px; font-weight: bold;color: white;">Welcome</h3>
-                        <div class="row" *ngIf="errorsList.length>0">
-                            <div class="col-md-12" style="margin-top: 10px;">
-                                <div class="alert alert-primary"
-                                    style="background-color: white;color: red;font-weight: bold;"
-                                    *ngFor="let error of errorsList;index as i">{{error }}
-                                </div>
+<div class="page-header" style="background-image: url('./assets/img/login-image.jpg');">
+    <div class="filter"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4 col-sm-6 mr-auto ml-auto">
+                <div class="card card-register">
+                    <div class="text-center" style="background-color: white;border-radius:8px;">
+                        <a routerLink="/"> <img src="assets/img/logo-big.png" width="200px"></a>
+                    </div>
+                    <br>
+                    <h3 class="title" style="margin-top: 10px; font-weight: bold;color: white;">Welcome</h3>
+                    <div class="row" *ngIf="errorsList.length>0">
+                        <div class="col-md-12" style="margin-top: 10px;">
+                            <div class="alert alert-primary"
+                                style="background-color: white;color: red;font-weight: bold;"
+                                *ngFor="let error of errorsList;index as i">{{error }}
                             </div>
                         </div>
-                        <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
-                            <label>Email</label>
-                            <div class="input-group form-group-no-border"
-                                [ngClass]="{'input-group-focus':focus===true}">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">
-                                        <i class="nc-icon nc-email-85"></i>
-                                    </span>
-                                </div>
-                                <input type="text" id="email" class="form-control" placeholder="Email"
-                                    (focus)="focus=true" (blur)="focus=false" formControlName="email">
+                    </div>
+                    <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
+                        <label>Name</label>
+                        <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">
+                                    <i class="nc-icon nc-badge"></i>
+                                </span>
                             </div>
-                            <div *ngIf="isSubmitted && signUpForm.controls.email.errors">
-                                <p *ngIf="signUpForm.controls.email.errors.required"
-                                    style="text-align: right;color:black;">Required</p>
-                                <p *ngIf="signUpForm.controls.email.errors.email"
-                                    style="text-align: right;color:black;">Should be a valid Email</p>
-                            </div>
-
-                            <label>Password</label>
-                            <div class="input-group form-group-no-border"
-                                [ngClass]="{'input-group-focus':focus1===true}">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">
-                                        <i class="nc-icon nc-key-25"></i>
-                                    </span>
-                                </div>
-                                <input type="password" class="form-control" placeholder="Password" (focus)="focus1=true"
-                                    (blur)="focus1=false" formControlName="password">
-                            </div>
-                            <div *ngIf="isSubmitted && signUpForm.controls.password.errors">
-                                <p *ngIf="signUpForm.controls.password.errors.required"
-                                    style="text-align: right;color:black;">Required</p>
-                            </div>
-
-                            <label>Confirm Password</label>
-                            <div class="input-group form-group-no-border"
-                                [ngClass]="{'input-group-focus':focus1===true}">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">
-                                        <i class="nc-icon nc-key-25"></i>
-                                    </span>
-                                </div>
-                                <input type="password" class="form-control" placeholder="Confirm Password"
-                                    (focus)="focus1=true" (blur)="focus1=false" formControlName="confirmPassword">
-                            </div>
-                            <div *ngIf="isSubmitted && signUpForm.controls.confirmPassword.errors">
-                                <p *ngIf="signUpForm.controls.confirmPassword.errors.required"
-                                    style="text-align: right;color:black;">Required</p>
-                            </div>
-                            <p *ngIf="isSubmitted && signUpForm.errors && signUpForm.errors.notSame"
-                                style="text-align: right;color:black;">
-                                Password does not match</p>
-                            <button type="submit" class="btn btn-danger btn-block btn-round" replaceText="Processing"
-                                [spinnerButton]="submitting">Register</button>
-                        </form>
-                        <div class="forgot">
-                            <a href="/login" class="btn btn-link btn-danger">Login</a><br>
-                            <a href="#" style="margin-top: 0;" class="btn btn-link btn-danger">Forgot password?</a>
+                            <input type="text" id="name" class="form-control" placeholder="Name" (focus)="focus=true"
+                                (blur)="focus=false" formControlName="name">
                         </div>
+                        <div *ngIf="isSubmitted && signUpForm.controls.name.errors">
+                            <p *ngIf="signUpForm.controls.name.errors.required" class="form-error">
+                                Required</p>
+                        </div>
+                        <label>WhatsApp number <img src="../../../assets/img/WhatsApp.png" width="25">
+                            <p class="font-s-10">(Enter 9 numbers without 0. Ex: 710422547)</p>
+                        </label>
+                        <div class="flex">
+                            +94&nbsp;
+                            <div style="width: 100%;">
+                                <input type="text" class="form-control" formControlName="phone" id="phone"
+                                    placeholder="Enter 9 digits phone number">
+                            </div>
+                        </div>
+                        <div *ngIf="isSubmitted && signUpForm.controls.phone.errors">
+                            <p *ngIf="signUpForm.controls.phone.errors.required" class="form-error">
+                                Required</p>
+                            <p *ngIf="signUpForm.controls.phone.errors.pattern" class="form-error">
+                                Phone number format invalid</p>
+                        </div>
+                        <label>Email</label>
+                        <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">
+                                    <i class="nc-icon nc-email-85"></i>
+                                </span>
+                            </div>
+                            <input type="text" id="email" class="form-control" placeholder="Email" (focus)="focus=true"
+                                (blur)="focus=false" formControlName="email">
+                        </div>
+                        <div *ngIf="isSubmitted && signUpForm.controls.email.errors">
+                            <p *ngIf="signUpForm.controls.email.errors.required" class="form-error">
+                                Required</p>
+                            <p *ngIf="signUpForm.controls.email.errors.email" class="form-error">
+                                Should be a valid Email</p>
+                        </div>
+
+                        <label>Password</label>
+                        <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus1===true}">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">
+                                    <i class="nc-icon nc-key-25"></i>
+                                </span>
+                            </div>
+                            <input type="password" class="form-control" placeholder="Password" (focus)="focus1=true"
+                                (blur)="focus1=false" formControlName="password">
+                        </div>
+                        <div *ngIf="isSubmitted && signUpForm.controls.password.errors">
+                            <p *ngIf="signUpForm.controls.password.errors.required" class="form-error">Required</p>
+                        </div>
+
+                        <label>Confirm Password</label>
+                        <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus1===true}">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">
+                                    <i class="nc-icon nc-key-25"></i>
+                                </span>
+                            </div>
+                            <input type="password" class="form-control" placeholder="Confirm Password"
+                                (focus)="focus1=true" (blur)="focus1=false" formControlName="confirmPassword">
+                        </div>
+                        <div *ngIf="isSubmitted && signUpForm.controls.confirmPassword.errors">
+                            <p *ngIf="signUpForm.controls.confirmPassword.errors.required" class="form-error">Required
+                            </p>
+                        </div>
+                        <p *ngIf="isSubmitted && signUpForm.errors && signUpForm.errors.notSame" class="form-error">
+                            Password does not match</p>
+                        <button type="submit" class="btn btn-danger btn-block btn-round" replaceText="Processing"
+                            [spinnerButton]="submitting">Register</button>
+                    </form>
+                    <div class="forgot">
+                        <a href="/login" class="btn btn-link btn-danger">Login</a>
                     </div>
                 </div>
             </div>
