--- a/src/app/components/Auth/login/login.component.html
+++ b/src/app/components/Auth/login/login.component.html
@@ -1,59 +1,59 @@
-<div class="wrapper">
-    <div class="page-header" style="background-image: url('./assets/img/login-image.jpg');">
-        <div class="filter"></div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4 col-sm-6 mr-auto ml-auto">
-                    <div class="card card-register">
-                        <h3 class="title" style="margin-top: 10px;font-weight: bold;color: white;">Login</h3>
-                        <div class="row" *ngIf="errorMessage" style="height: 50px;">
-                            <div class="col-md-12" style="margin-top: 10px;">
-                                <div class="alert alert-primary"
-                                    style="background-color: white;color: red;font-weight: bold;"
-                                    [innerHtml]="errorMessage"></div><br />
-                            </div>
+<div class="page-header" style="background-image: url('./assets/img/login-image.jpg');">
+    <div class="filter"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4 col-sm-6 mr-auto ml-auto">
+                <div class="card card-register">
+                    <div class="text-center" style="background-color: white;border-radius:8px;">
+                        <a routerLink="/"> <img src="assets/img/logo-big.png" width="200px"></a>
+                    </div>
+                    <br>
+                    <h3 class="title" style="margin-top: 10px;font-weight: bold;color: white;">Login</h3>
+                    <div class="row" *ngIf="errorMessage" style="height: 50px;">
+                        <div class="col-md-12" style="margin-top: 10px;">
+                            <div class="alert alert-primary"
+                                style="background-color: white;color: red;font-weight: bold;"
+                                [innerHtml]="errorMessage"></div><br />
                         </div>
-                        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-                            <label>Email</label>
-                            <div class="input-group form-group-no-border"
-                                [ngClass]="{'input-group-focus':focus===true}">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">
-                                        <i class="nc-icon nc-email-85"></i>
-                                    </span>
-                                </div>
-                                <input type="text" id="email" class="form-control" placeholder="Email"
-                                    (focus)="focus=true" (blur)="focus=false" formControlName="email">
+                    </div>
+                    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+                        <label>Email</label>
+                        <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">
+                                    <i class="nc-icon nc-email-85"></i>
+                                </span>
                             </div>
-                            <div *ngIf="isSubmitted && loginForm.controls.email.errors">
-                                <p *ngIf="loginForm.controls.email.errors.required"
-                                    style="text-align: right;color:black;">Required</p>
-                                <p *ngIf="loginForm.controls.email.errors.email" style="text-align: right;color:black;">
-                                    Should be a valid Email</p>
-                            </div>
+                            <input type="text" id="email" class="form-control" placeholder="Email" (focus)="focus=true"
+                                (blur)="focus=false" formControlName="email">
+                        </div>
+                        <div *ngIf="isSubmitted && loginForm.controls.email.errors">
+                            <p *ngIf="loginForm.controls.email.errors.required" class="form-error">
+                                Required</p>
+                            <p *ngIf="loginForm.controls.email.errors.email" class="form-error">
+                                Should be a valid Email</p>
+                        </div>
 
-                            <label>Password</label>
-                            <div class="input-group form-group-no-border"
-                                [ngClass]="{'input-group-focus':focus1===true}">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">
-                                        <i class="nc-icon nc-key-25"></i>
-                                    </span>
-                                </div>
-                                <input type="password" class="form-control" placeholder="Password" (focus)="focus1=true"
-                                    (blur)="focus1=false" formControlName="password">
+                        <label>Password</label>
+                        <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus1===true}">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">
+                                    <i class="nc-icon nc-key-25"></i>
+                                </span>
                             </div>
-                            <div *ngIf="isSubmitted && loginForm.controls.password.errors">
-                                <p *ngIf="loginForm.controls.password.errors.required"
-                                    style="text-align: right;color:black;">Required</p>
-                            </div>
-                            <button type="submit" class="btn btn-danger btn-block btn-round" replaceText="Processing"
-                                [spinnerButton]="submitting">Login</button>
-                        </form>
-                        <div class="forgot">
-                            <a href="/signup" class="btn btn-link btn-danger">Register Here</a>
-                            <a href="#" style="margin-top: 0;" class="btn btn-link btn-danger">Forgot password?</a>
+                            <input type="password" class="form-control" placeholder="Password" (focus)="focus1=true"
+                                (blur)="focus1=false" formControlName="password">
                         </div>
+                        <div *ngIf="isSubmitted && loginForm.controls.password.errors">
+                            <p *ngIf="loginForm.controls.password.errors.required" class="form-error">Required</p>
+                        </div>
+                        <button type="submit" class="btn btn-danger btn-block btn-round" replaceText="Processing"
+                            [spinnerButton]="submitting">Login</button>
+                    </form>
+                    <div class="forgot">
+                        <a href="/signup" class="btn btn-link btn-danger">Register Here</a>
+                        <a href="/password-reset-request" style="margin-top: 0;" class="btn btn-link btn-danger">Forgot
+                            password?</a>
                     </div>
                 </div>
             </div>
