Update address functionality

--- a/src/app/components/admin/my-shops/my-shops.component.html
+++ b/src/app/components/admin/my-shops/my-shops.component.html
@@ -56,13 +56,24 @@
                 <label>Name</label>
                 <input type="text" ngbAutofocus class="form-control" formControlName="name" id="name">
             </div>
+            <div class="form-group">
+                <label>Select location (Drag and drop the red marker <i style="color: red;"
+                        class="fa fa-map-marker"></i> on your location)</label>
+                <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" [disableDefaultUI]="false"
+                    [zoomControl]="true" [scrollwheel]="null" [gestureHandling]="'cooperative'"
+                    (mapClick)="mapClicked($event)">
+                    <agm-marker [latitude]="lat" [longitude]="lng" [markerDraggable]="true"
+                        (dragEnd)="markerDragEnd($event)">
+                    </agm-marker>
+                </agm-map>
+            </div>
             <div class="form-group" [ngClass]="{'has-danger':isDistrictError}">
                 <label>District</label>
                 <input id="typeahead-focus" type="text" class="form-control" [(ngModel)]="districtName"
                     [ngModelOptions]="{standalone: true}" (selectItem)="selectedDistrict($event)"
                     [ngbTypeahead]="searchDistricts" (focus)="focus$.next($any($event).target.value)"
                     (click)="click$.next($any($event).target.value)" #instance="ngbTypeahead"
-                    (focusout)="focusOut($event)" />
+                    (focusout)="focusOut($event)" (change)="changeD()" />
                 <div class="form-control-feedback" *ngIf="isDistrictError">No district selected. Please select one.
                 </div>
             </div>
@@ -78,7 +89,8 @@
             </div>
             <div class="form-group">
                 <label>Address</label>
-                <input type="text" class="form-control" formControlName="address" id="address">
+                <input type="text" class="form-control" formControlName="address" id="address"
+                    placeholder="165/B, Highlevel Road, Kirulapona">
             </div>
             <div class="form-group">
                 <label>WhatsApp number <img src="../../../assets/img/WhatsApp.png" width="25">
@@ -91,16 +103,6 @@
                             placeholder="Enter 9 digits phone number">
                     </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <label>Select location (Drag and drop the red marker <i style="color: red;"
-                        class="fa fa-map-marker"></i> on your location)</label>
-                <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" [disableDefaultUI]="false"
-                    [zoomControl]="true" [scrollwheel]="null" [gestureHandling]="'cooperative'">
-                    <agm-marker [latitude]="lat" [longitude]="lng" [markerDraggable]="true"
-                        (dragEnd)="markerDragEnd($event)">
-                    </agm-marker>
-                </agm-map>
             </div>
             <div class="form-group">
                 <label>Select image for the shop</label>
