--- a/src/app/components/admin/my-shops/my-shops.component.html
+++ b/src/app/components/admin/my-shops/my-shops.component.html
@@ -73,7 +73,7 @@
                     [ngModelOptions]="{standalone: true}" (selectItem)="selectedDistrict($event)"
                     [ngbTypeahead]="searchDistricts" (focus)="focus$.next($any($event).target.value)"
                     (click)="click$.next($any($event).target.value)" #instance="ngbTypeahead"
-                    (focusout)="focusOut($event)" (change)="changeD()" />
+                    (focusout)="focusOut($event)" />
                 <div class="form-control-feedback" *ngIf="isDistrictError">No district selected. Please select one.
                 </div>
             </div>
@@ -94,13 +94,13 @@
             </div>
             <div class="form-group">
                 <label>WhatsApp number <img src="../../../assets/img/WhatsApp.png" width="25">
-                    <p class="font-s-10">(Enter 9 numbers without 0. Ex: 710422547)</p>
+                    <p class="font-s-10">(Enter 9 numbers without 0. Ex: 71222333)</p>
                 </label>
                 <div class="flex">
                     +94&nbsp;
-                    <div style="width: 100%;">
+                    <div style="width: 100%;" class="form-group">
                         <input type="text" class="form-control" formControlName="phone" id="phone"
-                            placeholder="Enter 9 digits phone number">
+                            placeholder="Enter 9 digits phone number" (change)="test()">
                     </div>
                 </div>
             </div>
