--- a/src/assets/sass/custom-styles.scss
+++ b/src/assets/sass/custom-styles.scss
@@ -199,6 +199,10 @@ button.swal2-cancel.swal2-styled:hover {
     margin-bottom: 10px;
 }
 
+.font-bold {
+    font-weight: bold;
+}
+
 .font-s-10 {
     font-size: 10px;
 }
